# gdslayout

./: README.md  pyproject.toml
example/: PhC_example.ipynb  archimedean_longspiral_exmaple.ipynb  design_rules.ipynb  mechanics_example.ipynb  wg_example.ipynb
example/config_example/: 14.yaml
example/gds/: 12.gds  7.gds
src/gdslayout/: components copy.py  components.py  layout.py  structure.py  utils.py
src/gdslayout/device/: __init__.py  archimedean.py  cavity.py  coupler.py  mechanics.py  phc.py  wgm.py
